fix upper rating width and wrap

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ main {
 	overflow: hidden;
 	z-index: 1;
 	color: #fdcc0d;
+	white-space: nowrap;
 }
 
 .rating-lower {
